# app/Http/Controllers/AuthController.php
@@ -10,43 +10,6 @@ use Illuminate\Validation\ValidationException;
 
 class AuthController extends Controller
 {
-    /**
-     * @OA\Post(
-     *     path="/api/register",
-     *     summary="Register a new user",
-     *     tags={"Auth"},
-     *     @OA\Parameter(
-     *         name="first name",
-     *         in="query",
-     *         description="User's name",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
-     *     @OA\Parameter(
-     *         name="last name",
-     *         in="query",
-     *         description="User's email",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
-     *     @OA\Parameter(
-     *         name="email",
-     *         in="query",
-     *         description="User's email",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
-     *     @OA\Parameter(
-     *         name="password",
-     *         in="query",
-     *         description="User's password",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
-     *     @OA\Response(response="201", description="User registered successfully"),
-     *     @OA\Response(response="422", description="Validation errors")
-     * )
-     */
     public function register(Request $request)
     {
         $request->validate([
@@ -68,37 +31,6 @@ class AuthController extends Controller
 
     }
 
-
-    /**
-     * @OA\Post(
-     *     path="/api/login",
-     *     summary="Login user",
-     *     tags={"Auth"},
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             required={"email", "password"},
-     *             @OA\Property(property="email", type="string", format="email", example="user@example.com"),
-     *             @OA\Property(property="password", type="string", format="password", example="password123")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Successful login",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="user", type="object"),
-     *             @OA\Property(property="access_token", type="string", example="your_token_here")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=422,
-     *         description="Invalid credentials",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="error", type="string", example="Invalid credentials")
-     *         )
-     *     )
-     * )
-     */
     public function login(Request $request)
     {
         $request->validate([
@@ -123,29 +55,6 @@ class AuthController extends Controller
         ], 201);
 
     }
-
-    /**
-     * @OA\Post(
-     *     path="/api/logout",
-     *     summary="Logout user",
-     *     tags={"Auth"},
-     *     security={{ "bearerAuth":{} }},
-     *     @OA\Response(
-     *         response=200,
-     *         description="User logged out successfully",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="message", type="string", example="User logged out successfully")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=401,
-     *         description="Unauthenticated",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="error", type="string", example="Unauthenticated")
-     *         )
-     *     )
-     * )
-     */
 
     public function logout(Request $request)
     {
